@@ -1,3 +1,7 @@
+2019-02-25  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* chkdvifont.c: Forbid too long file name.
+
 2019-02-06  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* chkdvifont.c: Detect new JFM spec.
